<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleName"
        android:layout_width="316dp"
        android:layout_height="44dp"
        android:layout_marginTop="73dp"
        android:layout_marginBottom="32dp"
        android:text="@string/titleName"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/titleDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleDescription"
        android:layout_width="335dp"
        android:layout_height="57dp"
        android:layout_marginBottom="28dp"
        android:text="@string/titleDescription"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/USD_Amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/USD_Amount"
        android:layout_width="242dp"
        android:layout_height="58dp"
        android:layout_marginBottom="45dp"
        android:ems="10"
        android:hint="@string/USD_Amount"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/totalConversionAmount"
        android:layout_width="271dp"
        android:layout_height="55dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="62dp"
        android:text="@string/totalConversionAmount"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCost"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCost"
        android:layout_width="216dp"
        android:layout_height="69dp"
        android:layout_marginTop="44dp"
        android:text="@string/btnCost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="253dp"
        android:layout_height="155dp"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/conversion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="checkButton"
            android:text="@string/conversion1" />

        <RadioButton
            android:id="@+id/conversion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton"
            android:text="@string/conversion2" />

        <RadioButton
            android:id="@+id/conversion3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkButton"
            android:text="@string/conversion3" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>